--- a/test.html
+++ b/test.html
@@ -91,14 +91,14 @@ var $ = stab;
 //   // console.log(resp)
 // })
 
-// $.ajax('/README.md', {c:3, d:4}, function(resp){
-//   // console.log(resp)
-// })
-
-
-$('#p1').tap(function(e){
-  console.log(e)
+$.ajax('/README.md', {c:3, d:4}, function(resp){
+  // console.log(resp)
 })
+
+
+// $('#p1').tap(function(e){
+//   console.log(e)
+// })
 
 
 
