--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-<p class="p" id="p1">p1</p>
+<p class="p" style="position:absolute;top:0;left:0;" id="p1">p1</p>
 <p class="p" id="p2">p2</p>
 <p class="p" id="p3">p3</p>
 <input type="text" id="input1" value="12313">
@@ -26,6 +26,7 @@
 <script src="stab.event.js"></script>
 <script src="stab.tap.js"></script>
 <script src="stab.ajax.js"></script>
+<script src="stab.anim.js"></script>
 <script>
 // stab.fn.xx = function(){
 //   console.log(this)
@@ -100,7 +101,15 @@ $.ajax('/README.md', {c:3, d:4}, function(resp){
 //   console.log(e)
 // })
 
-
+setTimeout(function(){
+  $('#p1').anim('top:500px;left:500px;', function(){
+    this.anim('top:100px;left:100px;', function(){
+      this.anim('left:300px;background-color:#f00;', function(){
+        console.log(this.css())
+      })
+    }, 1)
+  }, 3)
+}, 1000);
 
 
 
