--- a/example.html
+++ b/example.html
@@ -24,13 +24,15 @@
 </select>
 <ul id="box"></ul>
 </body>
-<script src="stab.js"></script>
-<script src="stab.event.js"></script>
-<script src="stab.ajax.js"></script>
-<script src="stab.anim.js"></script>
-<script src="stab.router.js"></script>
-<script src="stab.tmpl.js"></script>
-<script src="stab.tap.js"></script>
+<!-- <script src="src/stab.js"></script>
+<script src="src/stab.event.js"></script>
+<script src="src/stab.ajax.js"></script>
+<script src="src/stab.anim.js"></script>
+<script src="src/stab.router.js"></script>
+<script src="src/stab.tmpl.js"></script>
+<script src="src/stab.tap.js"></script> -->
+
+<script src="dist/stab.all.min.js"></script>
 <script type="text/html" id="tpl">
   {% for(var i in this){ %}
     <li id="{%=i%}">{%=this[i]%}</li>
